SERVER-7006 use ::_exit() to prevent static destructors from running in tools

In error conditions encountered in running any of the tools (mongodump, mongorestore,
etc.), we may leave static objects in a state in which their destruction order causes
their static destructors to hit segfaults.  To prevent this, call ::_exit() at program
exit instead of returning from main().